--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "jsCourses",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
     "compile:sass": "node-sass sass/main.scss css/style.css -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,9 +18,17 @@
   "license": "ISC",
   "homepage": "https://github.com/VitaliiLynnyk/CompleteJSCourse",
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "@babel/core": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "live-server": "^1.2.1"
   }
 }
