--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.5.5",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
-    "live-server": "^1.2.1"
+    "bindings": "^1.5.0",
+    "fractional": "^1.0.0",
+    "live-server": "^1.2.1",
+    "uniqid": "^5.0.3"
   }
 }
